--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
       {% if site.show_downloads %}
         <a href="/" class="btn">Inicio</a>
         <a href="/problema/problema.html" class="btn">Problema</a>
+      {% endif %}
     </header>
 
     <main id="content" class="main-content" role="main">
